# akhilsinghrana.com

./: .dockerignore  .gitignore  CNAME  Dockerfile  README.md  main.py  makefile  pyproject.toml
.github/workflows/: build.yml  main.yml  push.yml
akhilsinghrana/: RAG_Chat.py  main.py
akhilsinghrana/backend/: RAG_Chat.py  bot_cache.json  main.py
akhilsinghrana/backend/content/: site-content.json
akhilsinghrana/backend/db/chroma_db/: chroma.sqlite3
akhilsinghrana/backend/db/faiss_db/: index.faiss  index.pkl
akhilsinghrana/db/chroma_db/: chroma.sqlite3
akhilsinghrana/frontend/: .firebaserc  AGENTS.md  next.config.ts  package-lock.json  package.json
akhilsinghrana/frontend/app/: globals.css  layout.tsx  page.tsx
akhilsinghrana/frontend/components/: BlogModal.tsx  ChatWidget.tsx  ContactModal.tsx  DotNav.tsx  Sidebar.tsx  SupportModal.tsx
akhilsinghrana/frontend/components/sections/: AboutSection.tsx  BlogSection.tsx  HomeSection.tsx  PublicationsSection.tsx
akhilsinghrana/frontend/components/ui/: BlogCarousel.tsx  PortfolioCarousel.tsx
akhilsinghrana/frontend/data/: about.ts  blogs.ts  navigation.ts  portfolio.ts  publications.ts
akhilsinghrana/frontend/hooks/: useActiveSection.ts  useTheme.ts
akhilsinghrana/frontend/providers/: ThemeProvider.tsx
akhilsinghrana/frontend/public/blogs/: blogRAG_Groq_Chatbot.html  blogWebsiteStackPart-1.html  blogWebsiteStackPart-2.html
akhilsinghrana/frontend/scripts/: export-content.mjs
akhilsinghrana/pages/: blogRAG_Groq_Chatbot.html  blogWebsiteStackPart-1.html  blogWebsiteStackPart-2.html  homepage.html
akhilsinghrana/static/: bot_cache.json
akhilsinghrana/static/scripts/css/: homepage.css
akhilsinghrana/static/scripts/js/: chatbot.js  homepage.js
db/chroma_db/: chroma.sqlite3
pages/: homepage.html
tests/: main_test.py
