[tool.poetry]
name = "akhilsinghrana"
version = "0.1.0"
description = "This is codebase for akhilsinghrana.com personal website"
authors = ["Akhil Singh Rana <akhilsinghrana@gmail.com>"]
readme = "README.md"
packages = [{include = "akhilsinghrana"}]
homepage = "https://akhilsinghrana.com"
repository = "https://github.com/akhilsinghrana/akhilsinghrana.com"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"

# dev dependencies
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
